# biblio

./: .gitignore  Procfile  README.md  environment.yml  manage.py  pyproject.toml  requirements.txt
apps/books/: admin.py  apps.py  core.py  forms.py  managers.py  models.py  statistics.py  urls.py  views.py
apps/books/api/: serializers.py  urls.py  views.py
apps/books/migrations/: 0009_event_user.py  0010_userpreferences.py  0011_delete_userpreferences.py  0012_reading_readingupdate.py  0013_readingupdate_date.py  0014_delete_bookendevent.py  0015_delete_bookstartevent.py  0016_delete_pageupdateevent.py  0017_delete_event.py  0018_remove_book_ordered.py  0019_edition.py  0020_bookcopy.py  0021_remove_book_pages.py  0022_reading_edition.py  0023_remove_reading_book.py  0024_remove_readingupdate_reading_delete_reading_and_more.py
apps/books/templatetags/: books_filters.py
apps/books/tests/: test_views.py
apps/readings/: models.py  urls.py  views.py
apps/readings/api/: serializers.py  urls.py  views.py
apps/readings/lib/: controllers.py  custom_definitions.py
apps/readings/migrations/: 0001_initial.py  0002_reading_current_page.py  0002_reading_status.py  (+2 more)
apps/theme/: urls.py
biblio/: admin.py  core.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
biblio/handle_views/: user.py
biblio/migrations/: 0001_initial.py
biblio/templates/: apps_menu.html  base.html  main_index.html  user.html
conf/: biblio.json
tests/: test.sh
utils/postgresql/: dump_isilanesorg.sh  import_heroku_db.sh  load_heroku_db_dump.sh  load_isilanesorg.sh
(+66 files in other folders)
