[project]
name = "biblio"
version = "0.2.2"
description = "Web to manage the books I own and read."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "gnureadline>=8.2.13",
    "plotly>=5.24.1",
    "django-components>=0.134",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6.9",
    "radon>=6.0.1",
    "ruff>=0.8.4",
]
